Add Alpha class

--- a/Problem3/Problem3/Problem3.vcxproj.filters
+++ b/Problem3/Problem3/Problem3.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Base.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Alpha.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Alpha.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
