--- a/Problem3/Problem3/Problem3.vcxproj
+++ b/Problem3/Problem3/Problem3.vcxproj
@@ -115,10 +115,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Alpha.cpp" />
     <ClCompile Include="Base.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Alpha.h" />
     <ClInclude Include="Base.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
