--- a/Problem3/Problem3/Problem3.vcxproj
+++ b/Problem3/Problem3/Problem3.vcxproj
@@ -117,11 +117,13 @@
   <ItemGroup>
     <ClCompile Include="Alpha.cpp" />
     <ClCompile Include="Base.cpp" />
+    <ClCompile Include="Beta.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alpha.h" />
     <ClInclude Include="Base.h" />
+    <ClInclude Include="Beta.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
