Add Gamma class

--- a/Problem3/Problem3/Problem3.vcxproj
+++ b/Problem3/Problem3/Problem3.vcxproj
@@ -118,12 +118,14 @@
     <ClCompile Include="Alpha.cpp" />
     <ClCompile Include="Base.cpp" />
     <ClCompile Include="Beta.cpp" />
+    <ClCompile Include="Gamma.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alpha.h" />
     <ClInclude Include="Base.h" />
     <ClInclude Include="Beta.h" />
+    <ClInclude Include="Gamma.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
