--- a/Problem3/Problem3/Problem3.vcxproj.filters
+++ b/Problem3/Problem3/Problem3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Beta.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Gamma.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Beta.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Gamma.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
