--- a/Problem3/Problem3/Problem3.vcxproj
+++ b/Problem3/Problem3/Problem3.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="Alpha.cpp" />
     <ClCompile Include="Base.cpp" />
     <ClCompile Include="Beta.cpp" />
+    <ClCompile Include="Checker.cpp" />
     <ClCompile Include="Gamma.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
@@ -125,6 +126,7 @@
     <ClInclude Include="Alpha.h" />
     <ClInclude Include="Base.h" />
     <ClInclude Include="Beta.h" />
+    <ClInclude Include="Checker.h" />
     <ClInclude Include="Gamma.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
