--- a/Problem2/Problem2/Problem2.vcxproj
+++ b/Problem2/Problem2/Problem2.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Checker.cpp" />
+    <ClCompile Include="Function.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
