--- a/Problem2/Problem2/Problem2.vcxproj.filters
+++ b/Problem2/Problem2/Problem2.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Checker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Function.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Function.h">
