Add a bit of technology class and announcement all class

--- a/Problem1/Problem1/Problem1.vcxproj
+++ b/Problem1/Problem1/Problem1.vcxproj
@@ -115,6 +115,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Technology.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AnnouncementAllClass.h" />
+    <ClInclude Include="Technology.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
