--- a/Problem1/Problem1/Problem1.vcxproj
+++ b/Problem1/Problem1/Problem1.vcxproj
@@ -115,11 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Developer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Technology.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnnouncementAllClass.h" />
+    <ClInclude Include="Developer.h" />
     <ClInclude Include="Technology.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
