--- a/Problem1/Problem1/Problem1.vcxproj.filters
+++ b/Problem1/Problem1/Problem1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Company.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Checker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Technology.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Company.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Checker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
